gccida/g1/expand_builtin_setjmp_setup
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_setjmp_setup/src/builtins.c:931:19: error: use of undeclared identifier 'machine_mode'
v4 = force_reg( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), v3); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_setjmp_setup/src/builtins.c:933:21: error: use of undeclared identifier 'machine_mode'
v5 = gen_rtx_MEM( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), v4); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_setjmp_setup/src/builtins.c:937:21: error: use of undeclared identifier 'machine_mode'
v7 = gen_rtx_MEM( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), v6); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_setjmp_setup/src/builtins.c:939:36: error: use of undeclared identifier 'machine_mode'
v8 = gen_rtx_fmt_u00( LABEL_REF, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), receiver_label); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_setjmp_setup/src/builtins.c:940:19: error: use of undeclared identifier 'machine_mode'
v9 = force_reg( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), v8); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_setjmp_setup/src/builtins.c:944:29: error: use of undeclared identifier 'machine_mode'
stack_save = gen_rtx_MEM( ( machine_mode)v2, v11); 
                            ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_builtin_setjmp_setup/src/obj/builtins.o] Error 1
